Issue #175: support Elasticsearch default logging pattern.